--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 checkpoints/vqgan_imagenet_f16_16384.ckp
+checkpoints/vqgan_imagenet_f16_16384.ckpt
+.gitignore
+taming/modules/autoencoder/lpips/vgg.pth
